Fix GET /pets
