# build/openapi.yml
@@ -1,131 +1,87 @@
-{
-  "openapi": "3.0.0",
-  "info": {
-    "title": "Sample API",
-    "description": "This is sample API",
-    "version": "0.0.1"
-  },
-  "servers": [
-    {
-      "url": "http://localhost:4010",
-      "description": "local mock on docker"
-    }
-  ],
-  "paths": {
-    "/users": {
-      "get": {
-        "operationId": "controllers.users.get",
-        "summary": "Returns a list of users.",
-        "tags": [
-          "users"
-        ],
-        "description": "Optional extended description in CommonMark or HTML.",
-        "responses": {
-          "200": {
-            "description": "A JSON array of user names",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  },
-                  "example": [
-                    "hoge",
-                    "foo",
-                    "bar",
-                    "aaa"
-                  ]
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/pets": {
-      "get": {
-        "operationId": "controllers.pets.get",
-        "summary": "List all pets",
-        "tags": [
-          "pets"
-        ],
-        "parameters": [
-          {
-            "name": "limit",
-            "in": "query",
-            "description": "How many items to return at one time (max 100)",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "A paged array of pets",
-            "headers": {
-              "x-next": {
-                "description": "A link to the next page of responses",
-                "schema": {
-                  "type": "string"
-                }
-              }
-            },
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "required": [
-                      "id",
-                      "name"
-                    ],
-                    "properties": {
-                      "id": {
-                        "type": "integer",
-                        "format": "int64",
-                        "example": 1
-                      },
-                      "name": {
-                        "type": "string",
-                        "example": "pochi"
-                      },
-                      "tag": {
-                        "type": "string",
-                        "example": "dog"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "required": [
-                    "code",
-                    "message"
-                  ],
-                  "properties": {
-                    "code": {
-                      "type": "integer",
-                      "format": "int32"
-                    },
-                    "message": {
-                      "type": "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-}
+openapi: 3.0.0
+info:
+  title: Sample API
+  description: This is sample API
+  version: 0.0.1
+servers:
+  - url: 'http://localhost:4010'
+    description: local mock on docker by prism
+  - url: 'http://localhost:5000'
+    description: local mock by connexion
+paths:
+  /users:
+    get:
+      operationId: controllers.users.get
+      summary: Returns a list of users.
+      tags:
+        - users
+      description: Optional extended description in CommonMark or HTML.
+      responses:
+        '200':
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+                example:
+                  - hoge
+                  - foo
+                  - bar
+                  - aaa
+  /pets:
+    get:
+      operationId: controllers.pets.get
+      summary: List all pets
+      tags:
+        - pets
+      parameters:
+        - name: limit
+          in: query
+          description: How many items to return at one time (max 100)
+          required: false
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: A paged array of pets
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  required:
+                    - id
+                    - name
+                  properties:
+                    id:
+                      type: integer
+                      format: int64
+                      example: 1
+                    name:
+                      type: string
+                      example: pochi
+                    tag:
+                      type: string
+                      example: dog
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                required:
+                  - code
+                  - message
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  message:
+                    type: string
